fix item alignment on table

--- a/src/styles/table.module.css
+++ b/src/styles/table.module.css
@@ -27,6 +27,7 @@
     color: #242424;
     border: 1px solid #242424;
     transition: 0.2s ease-in-out;
+    max-width: 200px;
 
     &:hover {
       cursor: pointer;
@@ -41,6 +42,10 @@
   justify-content: space-around;
   align-items: center;
   width: 100%;
+
+  & > * {
+    flex: 1;
+  }
 }
 
 @media (max-width: 600px) {
